# nb

./: .gitignore  0000_initial-setup.ipynb  0000_local-setup.ipynb  1.0 Outline.ipynb  1.0 Roadmap.ipynb  1.01 - Starter.ipynb  1.02 - Types and more.ipynb  1.1 Course Tools.ipynb  1.2 Variables and Conditionals.ipynb  1.3 Input & Output.ipynb  1.4 Strings.ipynb  1.5 Sequences.ipynb  1.5b Sequences Excercise with Generator.ipynb  1.6 Dictionaries.ipynb  1.7 Sets.ipynb  1.8 Iterations & Loops.ipynb  1.9 Functions.ipynb  2.0 Generators.ipynb  2.1 Numeric Types.ipynb  2.1b Objects & Classes.ipynb  2.2 Exceptions and Control Flow.ipynb  2.3 Modules & Packages.ipynb  2.4 Data & Object Types Notes.ipynb  2.5 Exercises.ipynb  3.2 Functions and Decorators.ipynb  3.2b Functions - Optional & Keyword Arguments.ipynb  3.2c Decorators.ipynb  3.2d Comprehensions.ipynb  3.3 More classes.ipynb  3.3b Mammal.ipynb  3.3c Object.ipynb  3.4 Concurrency.ipynb  3.5 XML-RPC.ipynb  4.1 Libraries.ipynb  5.0 - The os module.ipynb  5.1 PIL (Python Imaging Library).ipynb  5.2 Qt (PySide).ipynb  6.0 Libraries (continued) & Projects.ipynb  7.0 Data Science Fundamentals.ipynb  8.0 Introduction to Machine Learning.ipynb  (+23 more)
_archive/: Day4_Plan.ipynb  Day4_Sockets.ipynb  splinter_demo.ipynb
capstone/: README.md  pyproject.toml
capstone/capstone/: mel.py
capstone/tests/: test_capstone.py
conc/: astest.py
concurrent/: cpu_none.py  cpu_tpe.py  io_none.py  io_ppe.py
files/: config.yml  names-utf8.txt  names.txt  (+1 more)
vgapp/: pyproject.toml
vgapp/tests/: test_vgapp.py
vgapp/vgapp/: __init__.py  trade.py
(+118 files in other folders)
