[tool.poetry]
name = "nb"
version = "0.1.0"
description = "Notebooks and related files for VG Python class."
authors = ["John G."]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.2"
jupyterlab = "^0.35.4"
pytest = "^4.0"
bs4 = "^0.0.1"
requests = "^2.21"
numpy = "^1.15"
pandas = "^0.23.4"
matplotlib = "^3.0"
zwsp-steg-py = "^0.2.0"
splinter = "^0.10.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pillow = "^5.3"
flake8 = "^3.6"
pyyaml = "^3.13"
toml = "^0.10.0"
jupyterhub = "^0.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
