[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["John Gosset <john@gossetx.com>"]

[tool.poetry.dependencies]
python = "^3.6"
keras = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
